# home_assistant-solar_mind

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-test-ha.txt  requirements-test.txt
.cursor/rules/: validate-via-ha-mcp.mdc
.github/workflows/: tests.yml
_solar_mind/: __init__.py  const.py  manifest.json  sensor.py  services.yaml  strings.json
_solar_mind/ha/: __init__.py  plan_adapter.py
_solar_mind/mind/: generation_forecast.py  planner.py  solar_mind.py
_solar_mind/www/: solar-mind-away-period-card.js  solar-mind-cheapest-hours-card.js  solar-mind-energy-flow-card.js  solar-mind-forecast-card.js  solar-mind-milestones-card.js
custom_components/: __init__.py
custom_components/solar_mind/: __init__.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  number.py  planner.py  price_adapter.py  sensor.py  services.py  services.yaml  strings.json
custom_components/solax_pv_simulator/: __init__.py  button.py  config_flow.py  const.py  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  simulator.py  simulator_core.py  (+1 more)
dev/: cursor-mcp.example.json  docker-compose.yml  seed.sh  seed_storage.py  test_mcp_token.sh
lovelace/: solar_dashboard.yaml
scripts/: deploy.sh  deploy_all.sh  deploy_simulator.sh
tests/: __init__.py  conftest.py  test_config_flow.py  test_generation_forecast.py  test_integration.py  test_models.py  test_planner.py  test_price_adapter.py  test_services.py  test_simulator.py  test_strategies.py
(+30 files in other folders)
