[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project]
name = "solar-mind"
version = "0.1.0"
description = "Home Assistant integration for solar PV and battery optimization using spot prices"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
# Unit tests only (no Home Assistant). Source of truth for requirements-test.txt
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
# Unit + config flow tests (includes Home Assistant). Source of truth for requirements-test-ha.txt
test-ha = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-homeassistant-custom-component",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
